# purs-tools

./: .bazelignore  .bazelrc  .gitignore  .hlint.yaml  BUILD.bazel  LICENSE  Makefile  README.md  WORKSPACE.bazel  hie.yaml  snapshot.yaml
.github/workflows/: main.yaml  nightly.yaml
cmd/purs-compile/: BUILD.bazel  Main.hs  README.md
cmd/purs-compile-module/: BUILD.bazel  Main.hs  README.md
cmd/purs-externs/: BUILD.bazel  Main.hs
cmd/purs-module-information/: BUILD.bazel  Main.hs
cmd/purs-tools/: BUILD.bazel  README.md
examples/purs-compile-module/core-fn/: BUILD.bazel  README.md
examples/purs-compile-module/dependencies/: README.md
examples/purs-compile-module/dependencies/bar/: BUILD.bazel
examples/purs-compile-module/dependencies/baz/: BUILD.bazel  Baz.purs
examples/purs-compile-module/dependencies/foo/: BUILD.bazel
examples/purs-compile-module/dependencies/qux/: BUILD.bazel  Qux.purs
examples/purs-compile-module/ffi/: BUILD.bazel  Foo.js  Foo.purs  README.md
examples/purs-compile-module/instances/: BUILD.bazel  Foo.purs  README.md
examples/purs-compile-module/re-exports/: BUILD.bazel  Bar.purs  README.md
examples/purs-compile-module/simple/: BUILD.bazel  README.md
examples/purs-compile/dependencies/: README.md
examples/purs-compile/dependencies/app/: App.purs  BUILD.bazel
examples/purs-compile/dependencies/i18n/: BUILD.bazel  I18n.purs
examples/purs-compile/dependencies/io/: BUILD.bazel  IO.purs
examples/purs-compile/dependencies/string/: BUILD.bazel  String.js  String.purs
examples/purs-compile/instances/: BUILD.bazel  Bar.purs  Baz.purs  README.md
examples/purs-compile/re-exports/: BUILD.bazel  Baz.purs  Corge.purs  Grault.purs  Qux.purs  README.md
examples/purs-compile/simple/: BUILD.bazel  Bar.purs  README.md
examples/purs-compile/warnings/: BUILD.bazel  Bar.purs  Foo.purs  README.md
internal/compile-module/: BUILD.bazel  CompileModule.hs  CoreFn.hs  Error.hs  ErrorTest.hs  ExternsFile.hs  JavaScript.hs  SignatureExternsFile.hs  Version.hs
pkg/cst/: BUILD.bazel
pkg/rules_purescript/: BUILD.bazel  README.md  WORKSPACE.bazel  go.mod  go.sum  internal_deps.bzl
pkg/rules_purescript/internal/: BUILD.purescript_download.bazel.tpl  actions.bzl  providers.bzl  repositories.bzl  rules.bzl  toolchains.bzl
pkg/rules_purescript/internal/gazelle/purescript/: BUILD.bazel  language.go
pkg/rules_purescript/patches/: gazelle-with-runfiles.patch
pkg/rules_purescript/purescript/: defs.bzl  repositories.bzl
pkg/rules_purescript/tests/: BUILD.bazel  IO.js  IO.purs  actions_tests.bzl  list_helpers.bzl  rules_tests.bzl
pkg/rules_purescript/tests/bin_with_libs/: BUILD.bazel  Bar.purs  Baz.purs  BinWithLibs.purs  Foo.purs  bin_with_libs_test.sh
pkg/rules_purescript/tests/hello/: BUILD.bazel  Hello.js  Hello.purs  README.md  hello_test.sh
pkg/rules_purescript/tests/purescript_test/: BUILD.bazel  Hello.purs  HelloTest.purs
tools/buildifier/: BUILD.bazel  deps.bzl
tools/hlint/: BUILD.bazel
tools/ibazel/: BUILD.bazel  deps.bzl
tools/ormolu/: BUILD.bazel
