load(
    "@rules_haskell//haskell:defs.bzl",
    "haskell_binary",
    "haskell_repl",
)
load(
    "@rules_pkg//:pkg.bzl",
    "pkg_tar",
)

haskell_binary(
    name = "purs-compile-module",
    srcs = [
        "Main.hs",
    ],
    compiler_flags = [
        "-O2",
        "-Wall",
        "-Wcompat",
        "-Werror",
        "-Wincomplete-record-updates",
        "-Wincomplete-uni-patterns",
        "-Wmissing-methods",
        "-Wredundant-constraints",
        "-optc=-static",
        "-optl=-pthread",
        "-rtsopts",
        "-static",
        "-threaded",
        "-with-rtsopts=-N",
    ],
    visibility = [
        "//examples:__subpackages__",
    ],
    deps = [
        "//internal/compile-module",
        "@stackage//:optparse-applicative",
        "@stackage//:rio",
    ],
)

haskell_repl(
    name = "hie-bios",
    collect_data = False,
    deps = [
        ":purs-compile-module",
    ],
)

pkg_tar(
    name = "purs-compile-module.tar.gz",
    srcs = [
        ":purs-compile-module",
    ],
    extension = "tar.gz",
    mode = "0755",
    package_file_name = "purs-compile-module.tar.gz",
)
