workspace(
    name = "joneshf_rules_purescript",
)

# Basic loads

load(
    "@bazel_tools//tools/build_defs/repo:http.bzl",
    "http_archive",
)

# Archives and repositories

http_archive(
    name = "io_bazel_stardoc",
    sha256 = "36b8d6c2260068b9ff82faea2f7add164bf3436eac9ba3ec14809f335346d66a",
    strip_prefix = "stardoc-0.4.0",
    urls = [
        "https://github.com/bazelbuild/stardoc/archive/0.4.0.zip",
    ],
)

# Dependencies

# Load the dependencies we need for our rules first.
# DO NOT LOAD ANYTHING ELSE BEFORE THIS.

load(
    "@joneshf_rules_purescript//purescript:repositories.bzl",
    "rules_purescript_dependencies",
)

rules_purescript_dependencies()

# Now load the dendencies we need for development.

load(
    "@bazel_skylib//:workspace.bzl",
    "bazel_skylib_workspace",
)

bazel_skylib_workspace()

load(
    "@io_bazel_stardoc//:setup.bzl",
    "stardoc_repositories",
)

stardoc_repositories()

load(
    "@build_bazel_rules_nodejs//:index.bzl",
    "node_repositories",
)

node_repositories()
