workspace(
    name = "joneshf_rules_purescript",
)

# Basic loads

load(
    "@bazel_tools//tools/build_defs/repo:http.bzl",
    "http_archive",
)

# Archives and repositories

http_archive(
    name = "io_bazel_stardoc",
    sha256 = "36b8d6c2260068b9ff82faea2f7add164bf3436eac9ba3ec14809f335346d66a",
    strip_prefix = "stardoc-0.4.0",
    urls = [
        "https://github.com/bazelbuild/stardoc/archive/0.4.0.zip",
    ],
)

# Dependencies

# Load the dependencies we need for our rules first.
# DO NOT LOAD ANYTHING ELSE BEFORE THIS.

load(
    "@joneshf_rules_purescript//purescript:repositories.bzl",
    "bazel_gazelle_dependencies",
    "rules_purescript_dependencies",
    "rules_purescript_toolchains",
)

bazel_gazelle_dependencies()

rules_purescript_dependencies()

# Now load the dendencies we need for development.
load(
    "@io_bazel_rules_go//go:deps.bzl",
    "go_register_toolchains",
    "go_rules_dependencies",
)

go_rules_dependencies()

go_register_toolchains(
    version = "1.15.7",
)

# gazelle:repo bazel_gazelle
load(
    "@bazel_gazelle//:deps.bzl",
    "gazelle_dependencies",
)
load("//:internal_deps.bzl", "go_dependencies")

# gazelle:repository_macro internal_deps.bzl%go_dependencies
go_dependencies()

gazelle_dependencies(
    go_repository_default_config = "@//:WORKSPACE.bazel",
)

load(
    "@bazel_skylib//:workspace.bzl",
    "bazel_skylib_workspace",
)

bazel_skylib_workspace()

load(
    "@io_bazel_stardoc//:setup.bzl",
    "stardoc_repositories",
)

stardoc_repositories()

load(
    "@build_bazel_rules_nodejs//:index.bzl",
    "node_repositories",
)

node_repositories()

# Toolchains

rules_purescript_toolchains()
