sh_binary(
    name = "buildifier",
    srcs = select(
        {
            "//:linux": [
                "@buildifier_linux//file",
            ],
            "//:macos": [
                "@buildifier_macos//file",
            ],
            "//:windows": [
                "@buildifier_windows//file",
            ],
        },
        no_match_error = "No buildifier binary available for this platform",
    ),
)
