sh_binary(
    name = "ormolu",
    srcs = select(
        {
            "//:linux": [
                "@ormolu_linux//file",
            ],
            "//:macos": [
                "@ormolu_macos//file",
            ],
            "//:windows": [
                "@ormolu_windows//file",
            ],
        },
        no_match_error = "No ormolu binary available for this platform",
    ),
)
