load(
    "@bazel_skylib//rules:build_test.bzl",
    "build_test",
)
load(
    "@joneshf_rules_purescript//purescript:defs.bzl",
    "purescript_library",
)

build_test(
    name = "core-fn_library_test",
    targets = [
        ":core-fn_library",
    ],
)

build_test(
    name = "core-fn_test",
    targets = [
        ":core-fn",
    ],
)

# If we wanted to manage all of the flags and the usage of `purs-compile-module` by hand,
# we can use a `genrule` like below.
# This is largely to show how it's _possible_ to pass flags around.
# Usage of `purs-compile-module` should be automated by some other tooling.
genrule(
    name = "core-fn",
    srcs = [
        "Foo.purs",
    ],
    outs = [
        "corefn.json",
        "externs.cbor",
    ],
    cmd = " ".join(
        [
            "$(execpath //cmd/purs-compile-module)",
            "--output-corefn-file $(RULEDIR)/corefn.json",
            "--output-standard-externs-file $(RULEDIR)/externs.cbor",
            "--purs-file $(execpath Foo.purs)",
        ],
    ),
    tools = [
        "//cmd/purs-compile-module",
    ],
)

# If we don't want to manage everything ourselves,
# we can use a rule like below.
# This is more likely how we'd actually want to interact with `bazel`.
purescript_library(
    name = "core-fn_library",
    src = "Foo.purs",
    module = "Foo",
)
