load(
    "@bazel_skylib//rules:build_test.bzl",
    "build_test",
)

build_test(
    name = "qux_test",
    targets = [
        ":qux",
    ],
)

# If we wanted to manage all of the flags and the usage of `purs-compile-module` by hand,
# we can use a `genrule` like below.
# This is largely to show how it's _possible_ to pass flags around.
# Usage of `purs-compile-module` should be automated by some other tooling.
genrule(
    name = "foo",
    srcs = [
        "Foo.purs",
    ],
    outs = [
        "Foo.cbor",
    ],
    cmd = " ".join(
        [
            "$(execpath //cmd/purs-compile-module)",
            "--output-signature-externs-file $@",
            "--purs-file $(execpath Foo.purs)",
        ],
    ),
    tools = [
        "//cmd/purs-compile-module",
    ],
)

genrule(
    name = "bar",
    srcs = [
        ":foo",
        "Bar.purs",
    ],
    outs = [
        "Bar.cbor",
    ],
    cmd = " ".join(
        [
            "$(execpath //cmd/purs-compile-module)",
            "--input-externs-file $(execpath :foo)",
            "--output-signature-externs-file $@",
            "--purs-file $(execpath Bar.purs)",
        ],
    ),
    tools = [
        "//cmd/purs-compile-module",
    ],
)

genrule(
    name = "baz",
    srcs = [
        ":bar",
        ":foo",
        "Baz.purs",
    ],
    outs = [
        "Baz.cbor",
    ],
    cmd = " ".join(
        [
            "$(execpath //cmd/purs-compile-module)",
            "--input-externs-file $(execpath :bar)",
            "--input-externs-file $(execpath :foo)",
            "--output-signature-externs-file $@",
            "--purs-file $(execpath Baz.purs)",
        ],
    ),
    tools = [
        "//cmd/purs-compile-module",
    ],
)

genrule(
    name = "qux",
    srcs = [
        ":bar",
        ":baz",
        ":foo",
        "Qux.purs",
    ],
    outs = [
        "Qux.cbor",
    ],
    cmd = " ".join(
        [
            "$(execpath //cmd/purs-compile-module)",
            "--input-externs-file $(execpath :bar)",
            "--input-externs-file $(execpath :baz)",
            "--input-externs-file $(execpath :foo)",
            "--output-signature-externs-file $@",
            "--purs-file $(execpath Qux.purs)",
        ],
    ),
    tools = [
        "//cmd/purs-compile-module",
    ],
)

genrule(
    name = "corge",
    srcs = [
        ":qux",
        "Corge.purs",
    ],
    outs = [
        "Corge.cbor",
    ],
    cmd = " ".join(
        [
            "$(execpath //cmd/purs-compile-module)",
            "--input-externs-file $(execpath :qux)",
            "--output-signature-externs-file $@",
            "--purs-file $(execpath Corge.purs)",
        ],
    ),
    tools = [
        "//cmd/purs-compile-module",
    ],
)

genrule(
    name = "grault",
    srcs = [
        ":corge",
        "Grault.purs",
    ],
    outs = [
        "Grault.cbor",
    ],
    cmd = " ".join(
        [
            "$(execpath //cmd/purs-compile-module)",
            "--input-externs-file $(execpath :corge)",
            "--output-signature-externs-file $@",
            "--purs-file $(execpath Grault.purs)",
        ],
    ),
    tools = [
        "//cmd/purs-compile-module",
    ],
)
