load(
    "@bazel_skylib//rules:build_test.bzl",
    "build_test",
)
load(
    "@joneshf_rules_purescript//purescript:defs.bzl",
    "purescript_library",
)

build_test(
    name = "bar_test",
    targets = [
        ":bar",
    ],
)

build_test(
    name = "bar_library_test",
    targets = [
        ":bar_library",
    ],
)

build_test(
    name = "baz_test",
    targets = [
        ":baz",
    ],
)

build_test(
    name = "baz_library_test",
    targets = [
        ":baz_library",
    ],
)

build_test(
    name = "corge_test",
    targets = [
        ":corge",
    ],
)

build_test(
    name = "corge_library_test",
    targets = [
        ":corge_library",
    ],
)

build_test(
    name = "foo_test",
    targets = [
        ":foo",
    ],
)

build_test(
    name = "foo_library_test",
    targets = [
        ":foo_library",
    ],
)

build_test(
    name = "grault_test",
    targets = [
        ":grault",
    ],
)

build_test(
    name = "grault_library_test",
    targets = [
        ":grault_library",
    ],
)

build_test(
    name = "qux_library_test",
    targets = [
        ":qux_library",
    ],
)

build_test(
    name = "qux_test",
    targets = [
        ":qux",
    ],
)

# If we wanted to manage all of the flags and the usage of `purs-compile-module` by hand,
# we can use a `genrule` like below.
# This is largely to show how it's _possible_ to pass flags around.
# Usage of `purs-compile-module` should be automated by some other tooling.
genrule(
    name = "foo",
    srcs = [
        "Foo.purs",
    ],
    outs = [
        "Foo.cbor",
    ],
    cmd = " ".join(
        [
            "$(execpath //cmd/purs-compile-module)",
            "--output-signature-externs-file $@",
            "--purs-file $(execpath Foo.purs)",
        ],
    ),
    tools = [
        "//cmd/purs-compile-module",
    ],
)

genrule(
    name = "bar",
    srcs = [
        ":foo",
        "Bar.purs",
    ],
    outs = [
        "Bar.cbor",
    ],
    cmd = " ".join(
        [
            "$(execpath //cmd/purs-compile-module)",
            "--input-externs-file $(execpath :foo)",
            "--output-signature-externs-file $@",
            "--purs-file $(execpath Bar.purs)",
        ],
    ),
    tools = [
        "//cmd/purs-compile-module",
    ],
)

genrule(
    name = "baz",
    srcs = [
        ":bar",
        ":foo",
        "Baz.purs",
    ],
    outs = [
        "Baz.cbor",
    ],
    cmd = " ".join(
        [
            "$(execpath //cmd/purs-compile-module)",
            "--input-externs-file $(execpath :bar)",
            "--input-externs-file $(execpath :foo)",
            "--output-signature-externs-file $@",
            "--purs-file $(execpath Baz.purs)",
        ],
    ),
    tools = [
        "//cmd/purs-compile-module",
    ],
)

genrule(
    name = "qux",
    srcs = [
        ":bar",
        ":baz",
        ":foo",
        "Qux.purs",
    ],
    outs = [
        "Qux.cbor",
    ],
    cmd = " ".join(
        [
            "$(execpath //cmd/purs-compile-module)",
            "--input-externs-file $(execpath :bar)",
            "--input-externs-file $(execpath :baz)",
            "--input-externs-file $(execpath :foo)",
            "--output-signature-externs-file $@",
            "--purs-file $(execpath Qux.purs)",
        ],
    ),
    tools = [
        "//cmd/purs-compile-module",
    ],
)

genrule(
    name = "corge",
    srcs = [
        ":qux",
        "Corge.purs",
    ],
    outs = [
        "Corge.cbor",
    ],
    cmd = " ".join(
        [
            "$(execpath //cmd/purs-compile-module)",
            "--input-externs-file $(execpath :qux)",
            "--output-signature-externs-file $@",
            "--purs-file $(execpath Corge.purs)",
        ],
    ),
    tools = [
        "//cmd/purs-compile-module",
    ],
)

genrule(
    name = "grault",
    srcs = [
        ":corge",
        "Grault.purs",
    ],
    outs = [
        "Grault.cbor",
    ],
    cmd = " ".join(
        [
            "$(execpath //cmd/purs-compile-module)",
            "--input-externs-file $(execpath :corge)",
            "--output-signature-externs-file $@",
            "--purs-file $(execpath Grault.purs)",
        ],
    ),
    tools = [
        "//cmd/purs-compile-module",
    ],
)

# If we don't want to manage everything ourselves,
# we can use a rule like below.
# This is more likely how we'd actually want to interact with `bazel`.
#
# What's nice about using `purescript_library` is that we can list only the direct dependencies and have it work out what's actually necessary to compile.
# The dependencies are more like what's imported in the actual PureScript module.
# This is the real power of having language-specific rules:
# they abstract away a lot of the complexities in the underlying tooling.
# Another way to say that is:
# You talk about what you want to build,
# not how to build it.
purescript_library(
    name = "foo_library",
    src = "Foo.purs",
    module = "Foo",
)

purescript_library(
    name = "bar_library",
    src = "Bar.purs",
    module = "Bar",
    re_exports = [
        ":foo_library",
    ],
    deps = [
        ":foo_library",
    ],
)

purescript_library(
    name = "baz_library",
    src = "Baz.purs",
    module = "Baz",
    re_exports = [
        ":bar_library",
    ],
    deps = [
        ":bar_library",
    ],
)

purescript_library(
    name = "qux_library",
    src = "Qux.purs",
    module = "Qux",
    deps = [
        ":baz_library",
    ],
)

purescript_library(
    name = "corge_library",
    src = "Corge.purs",
    module = "Corge",
    deps = [
        ":qux_library",
    ],
)

purescript_library(
    name = "grault_library",
    src = "Grault.purs",
    module = "Grault",
    deps = [
        ":corge_library",
    ],
)
